# imageverify

./: .gitignore  CMakeLists.txt
app/: main.cc
include/: imageverify.h
lib/: lib.cc
scripts/: configure_with_env  with_env
test/: test.cc
